# SNAKE2

./: .gitignore  Feladatok.md  Grafika leírás.md  Grafika osztálydiagram.txt  LICENSE  Modell eventek viewhoz.md  README.md  SnakeJatekLeiras.md  SnakeJatekLeiras.txt
docs/: Modell eventek viewhoz.md  Packetek osztálydiagram.txt
graphics/: CMakeLists.txt  build.bat  build.sh
graphics/libs/glew/: libglew32d.lib
graphics/src/: bmptexture.h  camera.cpp  camera.h  cameracontrol.h  chesstex.h  cylinder.h  engine.cpp  engine.h  geometry.cpp  geometry.h  image.h  light.h  main.cpp  matek.h  material.h  object.cpp  object.h  observer.h  readable_geometry.h  scene.cpp  scene.h  shaderprogram.h  shadersources.h  snake_piece.h  snakepiece.h  sph.h  texture.cpp  texture.h  vectors.cpp  vectors.h
graphics/src/module2/: module2.cpp  module2.h
graphics/src/tests/: hello_test.cc
src/: cameracontrol.h  chesstex.h  cylinder.h  engine.cpp  geometry.h  light.h  main.cpp  material.h  obj_geometry.h  object.cpp  object.h  quad.h  scene.h  shaderprogram.h  texture.cpp  texture.h  triangle.h  vectors.cpp
